--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ runs:
     - name: Cache Composer packages
       uses: actions/cache@v4
       with:
-        path: ~/.composer/cache
+        path: $COMPOSER_HOME/cache
         key: composer-cache-${{ runner.os }}
 
     - name: Install jan-wennrich/bgg-portfolio-generator
